// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Items matches snapshot. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        data-testid="breadcrumbs"
      >
        <a
          aria-label="Categoría Animales y Mascotas"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1071&description=Animales-y-Mascotas"
        >
          Animales y Mascotas
        </a>
        <div
          aria-hidden="true"
        >
          &gt;
        </div>
        <a
          aria-label="Categoría Perros"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1072&description=Perros"
        >
          Perros
        </a>
        <div
          aria-hidden="true"
        >
          &gt;
        </div>
        <a
          aria-label="Categoría Perros de Raza"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1073&description=Perros-de-Raza"
        >
          Perros de Raza
        </a>
      </nav>
      <section>
        <article
          data-testid="listItemsItem"
        >
          <figure
            data-testid="listItemsItemImage"
          >
            <a
              href="/items/MLA933038257?description=Perro-De-Raza-cachorros-Shitzu-Tzu-Mini-Hembramacho"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </a>
          </figure>
          <div>
            <div>
              <div>
                <div>
                  <div
                    aria-label="45000 pesos"
                    data-testid="priceDisplay"
                  >
                    <span>
                      $
                       
                      45.000
                    </span>
                  </div>
                </div>
                <div>
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="El producto Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho tiene envío gratis."
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="El producto tiene envío gratis."
                    />
                    <noscript />
                  </span>
                </div>
              </div>
              <div>
                Buenos Aires, Merlo
              </div>
            </div>
            <a
              href="/items/MLA933038257?description=Perro-De-Raza-cachorros-Shitzu-Tzu-Mini-Hembramacho"
            >
              <h2>
                Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho
              </h2>
            </a>
          </div>
        </article>
        <article
          data-testid="listItemsItem"
        >
          <figure
            data-testid="listItemsItemImage"
          >
            <a
              href="/items/MLA912295399?description=Shitzu-Shihtzu-Cachorros"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Imagen de Shitzu Shihtzu Cachorros."
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </a>
          </figure>
          <div>
            <div>
              <div>
                <div>
                  <div
                    aria-label="68000 pesos"
                    data-testid="priceDisplay"
                  >
                    <span>
                      $
                       
                      68.000
                    </span>
                  </div>
                </div>
                <div>
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="El producto Shitzu Shihtzu Cachorros tiene envío gratis."
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="El producto tiene envío gratis."
                    />
                    <noscript />
                  </span>
                </div>
              </div>
              <div>
                Capital Federal, Flores
              </div>
            </div>
            <a
              href="/items/MLA912295399?description=Shitzu-Shihtzu-Cachorros"
            >
              <h2>
                Shitzu Shihtzu Cachorros
              </h2>
            </a>
          </div>
        </article>
        <article
          data-testid="listItemsItem"
        >
          <figure
            data-testid="listItemsItemImage"
          >
            <a
              href="/items/MLA1145160535?description=Shitzu-Cachorros-"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Imagen de Shitzu Cachorros ."
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </a>
          </figure>
          <div>
            <div>
              <div>
                <div>
                  <div
                    aria-label="32000 pesos"
                    data-testid="priceDisplay"
                  >
                    <span>
                      $
                       
                      32.000
                    </span>
                  </div>
                </div>
                <div>
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="El producto Shitzu Cachorros  tiene envío gratis."
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="El producto tiene envío gratis."
                    />
                    <noscript />
                  </span>
                </div>
              </div>
              <div>
                Buenos Aires, bsas
              </div>
            </div>
            <a
              href="/items/MLA1145160535?description=Shitzu-Cachorros-"
            >
              <h2>
                Shitzu Cachorros 
              </h2>
            </a>
          </div>
        </article>
        <article
          data-testid="listItemsItem"
        >
          <figure
            data-testid="listItemsItemImage"
          >
            <a
              href="/items/MLA1106055539?description=Shitzu-Machito"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Imagen de Shitzu Machito."
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </a>
          </figure>
          <div>
            <div>
              <div>
                <div>
                  <div
                    aria-label="65000 pesos"
                    data-testid="priceDisplay"
                  >
                    <span>
                      $
                       
                      65.000
                    </span>
                  </div>
                </div>
                <div>
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="El producto Shitzu Machito tiene envío gratis."
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="El producto tiene envío gratis."
                    />
                    <noscript />
                  </span>
                </div>
              </div>
              <div>
                Buenos Aires, Palermo
              </div>
            </div>
            <a
              href="/items/MLA1106055539?description=Shitzu-Machito"
            >
              <h2>
                Shitzu Machito
              </h2>
            </a>
          </div>
        </article>
        <article
          data-testid="listItemsItem"
        >
          <figure
            data-testid="listItemsItemImage"
          >
            <a
              href="/items/MLA1111106270?description=Cachorro-Shitzu-Shitzu-Hermoso-Listo-Para-Entregar"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Imagen de Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar."
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </a>
          </figure>
          <div>
            <div>
              <div>
                <div>
                  <div
                    aria-label="50000 pesos"
                    data-testid="priceDisplay"
                  >
                    <span>
                      $
                       
                      50.000
                    </span>
                  </div>
                </div>
                <div>
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="El producto Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar tiene envío gratis."
                      data-nimg="intrinsic"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                      title="El producto tiene envío gratis."
                    />
                    <noscript />
                  </span>
                </div>
              </div>
              <div>
                Buenos Aires, 9 De Abril
              </div>
            </div>
            <a
              href="/items/MLA1111106270?description=Cachorro-Shitzu-Shitzu-Hermoso-Listo-Para-Entregar"
            >
              <h2>
                Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar
              </h2>
            </a>
          </div>
        </article>
      </section>
    </div>
  </body>,
  "container": <div>
    <nav
      data-testid="breadcrumbs"
    >
      <a
        aria-label="Categoría Animales y Mascotas"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1071&description=Animales-y-Mascotas"
      >
        Animales y Mascotas
      </a>
      <div
        aria-hidden="true"
      >
        &gt;
      </div>
      <a
        aria-label="Categoría Perros"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1072&description=Perros"
      >
        Perros
      </a>
      <div
        aria-hidden="true"
      >
        &gt;
      </div>
      <a
        aria-label="Categoría Perros de Raza"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1073&description=Perros-de-Raza"
      >
        Perros de Raza
      </a>
    </nav>
    <section>
      <article
        data-testid="listItemsItem"
      >
        <figure
          data-testid="listItemsItemImage"
        >
          <a
            href="/items/MLA933038257?description=Perro-De-Raza-cachorros-Shitzu-Tzu-Mini-Hembramacho"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </a>
        </figure>
        <div>
          <div>
            <div>
              <div>
                <div
                  aria-label="45000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    45.000
                  </span>
                </div>
              </div>
              <div>
                <span
                  style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                >
                  <span
                    style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                      style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                    />
                  </span>
                  <img
                    alt="El producto Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho tiene envío gratis."
                    data-nimg="intrinsic"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="El producto tiene envío gratis."
                  />
                  <noscript />
                </span>
              </div>
            </div>
            <div>
              Buenos Aires, Merlo
            </div>
          </div>
          <a
            href="/items/MLA933038257?description=Perro-De-Raza-cachorros-Shitzu-Tzu-Mini-Hembramacho"
          >
            <h2>
              Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho
            </h2>
          </a>
        </div>
      </article>
      <article
        data-testid="listItemsItem"
      >
        <figure
          data-testid="listItemsItemImage"
        >
          <a
            href="/items/MLA912295399?description=Shitzu-Shihtzu-Cachorros"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="Imagen de Shitzu Shihtzu Cachorros."
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </a>
        </figure>
        <div>
          <div>
            <div>
              <div>
                <div
                  aria-label="68000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    68.000
                  </span>
                </div>
              </div>
              <div>
                <span
                  style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                >
                  <span
                    style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                      style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                    />
                  </span>
                  <img
                    alt="El producto Shitzu Shihtzu Cachorros tiene envío gratis."
                    data-nimg="intrinsic"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="El producto tiene envío gratis."
                  />
                  <noscript />
                </span>
              </div>
            </div>
            <div>
              Capital Federal, Flores
            </div>
          </div>
          <a
            href="/items/MLA912295399?description=Shitzu-Shihtzu-Cachorros"
          >
            <h2>
              Shitzu Shihtzu Cachorros
            </h2>
          </a>
        </div>
      </article>
      <article
        data-testid="listItemsItem"
      >
        <figure
          data-testid="listItemsItemImage"
        >
          <a
            href="/items/MLA1145160535?description=Shitzu-Cachorros-"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="Imagen de Shitzu Cachorros ."
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </a>
        </figure>
        <div>
          <div>
            <div>
              <div>
                <div
                  aria-label="32000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    32.000
                  </span>
                </div>
              </div>
              <div>
                <span
                  style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                >
                  <span
                    style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                      style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                    />
                  </span>
                  <img
                    alt="El producto Shitzu Cachorros  tiene envío gratis."
                    data-nimg="intrinsic"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="El producto tiene envío gratis."
                  />
                  <noscript />
                </span>
              </div>
            </div>
            <div>
              Buenos Aires, bsas
            </div>
          </div>
          <a
            href="/items/MLA1145160535?description=Shitzu-Cachorros-"
          >
            <h2>
              Shitzu Cachorros 
            </h2>
          </a>
        </div>
      </article>
      <article
        data-testid="listItemsItem"
      >
        <figure
          data-testid="listItemsItemImage"
        >
          <a
            href="/items/MLA1106055539?description=Shitzu-Machito"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="Imagen de Shitzu Machito."
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </a>
        </figure>
        <div>
          <div>
            <div>
              <div>
                <div
                  aria-label="65000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    65.000
                  </span>
                </div>
              </div>
              <div>
                <span
                  style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                >
                  <span
                    style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                      style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                    />
                  </span>
                  <img
                    alt="El producto Shitzu Machito tiene envío gratis."
                    data-nimg="intrinsic"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="El producto tiene envío gratis."
                  />
                  <noscript />
                </span>
              </div>
            </div>
            <div>
              Buenos Aires, Palermo
            </div>
          </div>
          <a
            href="/items/MLA1106055539?description=Shitzu-Machito"
          >
            <h2>
              Shitzu Machito
            </h2>
          </a>
        </div>
      </article>
      <article
        data-testid="listItemsItem"
      >
        <figure
          data-testid="listItemsItemImage"
        >
          <a
            href="/items/MLA1111106270?description=Cachorro-Shitzu-Shitzu-Hermoso-Listo-Para-Entregar"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt="Imagen de Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar."
                data-nimg="intrinsic"
                decoding="async"
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
              <noscript />
            </span>
          </a>
        </figure>
        <div>
          <div>
            <div>
              <div>
                <div
                  aria-label="50000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    50.000
                  </span>
                </div>
              </div>
              <div>
                <span
                  style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                >
                  <span
                    style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2716%27%20height=%2716%27/%3e"
                      style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                    />
                  </span>
                  <img
                    alt="El producto Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar tiene envío gratis."
                    data-nimg="intrinsic"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    title="El producto tiene envío gratis."
                  />
                  <noscript />
                </span>
              </div>
            </div>
            <div>
              Buenos Aires, 9 De Abril
            </div>
          </div>
          <a
            href="/items/MLA1111106270?description=Cachorro-Shitzu-Shitzu-Hermoso-Listo-Para-Entregar"
          >
            <h2>
              Cachorro Shitzu Shitzu !! Hermoso !! Listo Para Entregar
            </h2>
          </a>
        </div>
      </article>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ListItemsItem matches snapshot. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        data-testid="breadcrumbs"
      >
        <a
          aria-label="Categoría Animales y Mascotas"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1071&description=Animales-y-Mascotas"
        >
          Animales y Mascotas
        </a>
        <div
          aria-hidden="true"
        >
          &gt;
        </div>
        <a
          aria-label="Categoría Perros"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1072&description=Perros"
        >
          Perros
        </a>
        <div
          aria-hidden="true"
        >
          &gt;
        </div>
        <a
          aria-label="Categoría Perros de Raza"
          data-testid="breadcrumbLink"
          href="/items?category=MLA1073&description=Perros-de-Raza"
        >
          Perros de Raza
        </a>
      </nav>
      <section>
        <article
          data-testid="detailedItem"
        >
          <div>
            <div>
              <picture
                data-testid="picturesContainer"
              >
                <div
                  class="carousel-root"
                >
                  <div
                    class="carousel carousel-slider"
                    style="width: 100%;"
                  >
                    <button
                      aria-label="previous slide / item"
                      class="control-arrow control-prev control-disabled"
                      type="button"
                    />
                    <div
                      class="slider-wrapper axis-horizontal"
                    >
                      <ul
                        class="slider animated"
                        style="transform: translate3d(-100%,0,0); transition-duration: 350ms;"
                      >
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide selected previous"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27281%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27308%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27407%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                        <li
                          class="slide selected previous"
                        >
                          <div>
                            <span
                              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                            >
                              <span
                                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                              >
                                <img
                                  alt=""
                                  aria-hidden="true"
                                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27281%27%20height=%27500%27/%3e"
                                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                                />
                              </span>
                              <img
                                alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                                aria-hidden="true"
                                data-nimg="intrinsic"
                                data-testid="picturesContainerPicture"
                                decoding="async"
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                                title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              />
                              <noscript />
                            </span>
                          </div>
                        </li>
                      </ul>
                    </div>
                    <button
                      aria-label="next slide / item"
                      class="control-arrow control-next control-disabled"
                      type="button"
                    />
                  </div>
                </div>
              </picture>
            </div>
            <div>
              <div>
                Nuevo | 0 vendidos
              </div>
              <h1>
                Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho
              </h1>
              <div>
                <div
                  aria-label="45000 pesos"
                  data-testid="priceDisplay"
                >
                  <span>
                    $
                     
                    45.000
                  </span>
                  <span
                    aria-hidden="true"
                  >
                    <sup>
                      00
                    </sup>
                  </span>
                </div>
              </div>
              <div>
                <button
                  data-testid="buyButton"
                  name="buy"
                  type="button"
                >
                  Comprar
                </button>
              </div>
            </div>
          </div>
          <div>
            <h2>
              Descripción del produco
            </h2>
            <p
              data-testid="detailedItemDescription"
            >
              LEER :no se me permite pasar ningún tipo de contacto ni dirección por este medio a no ser que compre mi publicación de 200.COMPRAR CON TRANQUILIDAD PUBLICACION ACCESORIOS SHITZU MELI Y COORDINAMOS. (si no hay disponibilidad se puede cancelar dicha compra)En caso de querer comprar por mercado libre con tarjeta COMPRAR PUBLICACION CACHORROS SHITZU MACHO/ HEMBRA PAGO CON TARJETA . VACUNADOS Y DESPARACITADOS!MACHITO NEGRO DOS MESESLISTO PARA ENTREGA!! para más info comprar la publicación Accesorios shitzu meli y coordinamos por privado! Se entregan a partir de los 45 días en adelante una vez que han sido vacunados y previamente desparacitados. Se alimentan con royal canin y están super cuidados y mimados!!HERMOSOS MIMOSOS Y COMPAÑEROS SHITZU MINI.RAZA DE PELO LARGO (NO MUDA PELO)-FACIL DE DOMESTICAR-MUY INTELIGENTES Y TRANQUILOS.-RAZA PEQUEÑA IDEAL PARA DEPARTAMENTOS.-BUENOS CON NIÑOS U OTRAS MASCOTAS.
            </p>
          </div>
        </article>
      </section>
    </div>
  </body>,
  "container": <div>
    <nav
      data-testid="breadcrumbs"
    >
      <a
        aria-label="Categoría Animales y Mascotas"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1071&description=Animales-y-Mascotas"
      >
        Animales y Mascotas
      </a>
      <div
        aria-hidden="true"
      >
        &gt;
      </div>
      <a
        aria-label="Categoría Perros"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1072&description=Perros"
      >
        Perros
      </a>
      <div
        aria-hidden="true"
      >
        &gt;
      </div>
      <a
        aria-label="Categoría Perros de Raza"
        data-testid="breadcrumbLink"
        href="/items?category=MLA1073&description=Perros-de-Raza"
      >
        Perros de Raza
      </a>
    </nav>
    <section>
      <article
        data-testid="detailedItem"
      >
        <div>
          <div>
            <picture
              data-testid="picturesContainer"
            >
              <div
                class="carousel-root"
              >
                <div
                  class="carousel carousel-slider"
                  style="width: 100%;"
                >
                  <button
                    aria-label="previous slide / item"
                    class="control-arrow control-prev control-disabled"
                    type="button"
                  />
                  <div
                    class="slider-wrapper axis-horizontal"
                  >
                    <ul
                      class="slider animated"
                      style="transform: translate3d(-100%,0,0); transition-duration: 350ms;"
                    >
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide selected previous"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27281%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27308%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27407%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27375%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                      <li
                        class="slide selected previous"
                      >
                        <div>
                          <span
                            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                          >
                            <span
                              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                            >
                              <img
                                alt=""
                                aria-hidden="true"
                                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27281%27%20height=%27500%27/%3e"
                                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                              />
                            </span>
                            <img
                              alt="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                              aria-hidden="true"
                              data-nimg="intrinsic"
                              data-testid="picturesContainerPicture"
                              decoding="async"
                              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                              title="Imagen de Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho."
                            />
                            <noscript />
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <button
                    aria-label="next slide / item"
                    class="control-arrow control-next control-disabled"
                    type="button"
                  />
                </div>
              </div>
            </picture>
          </div>
          <div>
            <div>
              Nuevo | 0 vendidos
            </div>
            <h1>
              Perro De Raza /cachorros Shitzu Tzu Mini Hembra-macho
            </h1>
            <div>
              <div
                aria-label="45000 pesos"
                data-testid="priceDisplay"
              >
                <span>
                  $
                   
                  45.000
                </span>
                <span
                  aria-hidden="true"
                >
                  <sup>
                    00
                  </sup>
                </span>
              </div>
            </div>
            <div>
              <button
                data-testid="buyButton"
                name="buy"
                type="button"
              >
                Comprar
              </button>
            </div>
          </div>
        </div>
        <div>
          <h2>
            Descripción del produco
          </h2>
          <p
            data-testid="detailedItemDescription"
          >
            LEER :no se me permite pasar ningún tipo de contacto ni dirección por este medio a no ser que compre mi publicación de 200.COMPRAR CON TRANQUILIDAD PUBLICACION ACCESORIOS SHITZU MELI Y COORDINAMOS. (si no hay disponibilidad se puede cancelar dicha compra)En caso de querer comprar por mercado libre con tarjeta COMPRAR PUBLICACION CACHORROS SHITZU MACHO/ HEMBRA PAGO CON TARJETA . VACUNADOS Y DESPARACITADOS!MACHITO NEGRO DOS MESESLISTO PARA ENTREGA!! para más info comprar la publicación Accesorios shitzu meli y coordinamos por privado! Se entregan a partir de los 45 días en adelante una vez que han sido vacunados y previamente desparacitados. Se alimentan con royal canin y están super cuidados y mimados!!HERMOSOS MIMOSOS Y COMPAÑEROS SHITZU MINI.RAZA DE PELO LARGO (NO MUDA PELO)-FACIL DE DOMESTICAR-MUY INTELIGENTES Y TRANQUILOS.-RAZA PEQUEÑA IDEAL PARA DEPARTAMENTOS.-BUENOS CON NIÑOS U OTRAS MASCOTAS.
          </p>
        </div>
      </article>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
